--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <title>Hugh Culling's Portfolio</title>
         
+        <link rel="stylesheet" href="./styles/styles.css">
+
     </head>
     <body>
         <h1>Hugh Culling</h1>
