--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         
         <link rel="stylesheet" href="./styles/styles.css">
 
+        <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
+
     </head>
     <body>
         <h1>Hugh Culling</h1>
