added nav bar and footer

--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
 
     </head>
     <body>
-        <h1>Hugh Culling</h1>
+        <h1>Hugh Culling's Portfolio</h1>
+
+        <hr>
+
+        <nav>
+            <a href="index.html">Index</a> |
+        </nav>
+
+        <hr>
+
+        <footer>
+            <p>Author: Hugh Wilfred Culling</p>
+            <p><a href="mailto:hughculling@icloud.com">hughculling@icloud.com</a></p>
+        </footer>
+
     </body>
 </html>
