--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@
 
         <nav>
             <a href="index.html">Index</a> |
+            <a href="about.html">About</a>
         </nav>
 
         <hr>
