--- a/about.html
+++ b/about.html
@@ -7,6 +7,8 @@
 
         <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
 
+        <script src="./scripts/dark-mode.js"></script>
+
     </head>
     <body>
         <h1>Hugh Culling's Portfolio</h1>
