added attributes to img

--- a/about.html
+++ b/about.html
@@ -25,7 +25,10 @@
         <section>
             <h2>About</h2>
 
-            <img src="./images/portrait.jpg">
+            <!-- It's good practise to always define the 'alt', 'height' and 'width' attributes for images. -->
+            <img src="./images/portrait.jpg" alt="portrait" height="170" width="215">
+
+            <p>Hi, I'm Hugh, and I'm an aspiring website developer. I recently graduated from Liverpool Hope University with a 2:2 in Computer Science. During the course we learned about website development, AI, android app development</p>
         </section>
 
         <hr>
