--- a/about.html
+++ b/about.html
@@ -28,7 +28,10 @@
             <!-- It's good practise to always define the 'alt', 'height' and 'width' attributes for images. -->
             <img src="./images/portrait.jpg" alt="portrait" height="170" width="215">
 
-            <p>Hi, I'm Hugh, and I'm an aspiring website developer. I recently graduated from Liverpool Hope University with a 2:2 in Computer Science. During the course we learned about website development, AI, android app development</p>
+            <!-- It is good practise to avoid long code lines, it's inconvenient to scroll-->
+            <p>Hi, I'm Hugh, and I want to be a professional web developer. \n I've got a website, which can be found at 
+                <a href="https://www.live-stream-music.com">https://www.live-stream-music.com</a>.
+            </p>
         </section>
 
         <hr>
