--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
 
             <!-- It is good practise to avoid long code lines, it's inconvenient to scroll-->
             <p>Hi, I'm Hugh, and I want to be a professional web developer. \n I've got a website, which can be found at 
-                <a href="https://www.live-stream-music.com">https://www.live-stream-music.com</a>.
+                <a href="https://www.live-stream-music.com" target="_blank">https://www.live-stream-music.com</a>.
             </p>
         </section>
 
