moved files around

--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
 
         <hr>
 
+        <!-- An 'html' folder was added for neatness but the index.html file needs to remain in the root as it is -->
+        <!-- the entry point to this file. -->
         <nav>
-            <a href="index.html">Index</a> |
-            <a href="about.html">About</a>
+            <a href="./index.html">Index</a> |
+            <a href="./html/about.html">About</a>
         </nav>
 
         <hr>
