--- a/html/about.html
+++ b/html/about.html
@@ -3,11 +3,11 @@
     <head>
         <title>About | Hugh Culling's Portfolio</title>
         
-        <link rel="stylesheet" href="./styles/styles.css">
+        <link rel="stylesheet" href="../styles/styles.css">
 
-        <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
+        <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
 
-        <script src="./scripts/dark-mode.js"></script>
+        <script src="../scripts/dark-mode.js"></script>
 
     </head>
     <body>
