fixed broken asset links

--- a/html/about.html
+++ b/html/about.html
@@ -27,7 +27,7 @@
             <h2>About</h2>
 
             <!-- It's good practise to always define the 'alt', 'height' and 'width' attributes for images. -->
-            <img src="./images/portrait.jpg" alt="portrait" height="170" width="215">
+            <img src="../images/portrait.jpg" alt="portrait" height="170" width="215">
 
             <!-- It is good practise to avoid long code lines, it's inconvenient to scroll-->
             <p>Hi, I'm Hugh, and I want to be a professional web developer. \n I've got a website, which can be found at 
