--- a/html/about.html
+++ b/html/about.html
@@ -30,7 +30,7 @@
             <img src="../images/portrait.jpg" alt="portrait" height="170" width="215">
 
             <!-- It is good practise to avoid long code lines, it's inconvenient to scroll-->
-            <p>Hi, I'm Hugh, and I want to be a professional web developer. /n I've got a website, which can be found at 
+            <p>Hi, I'm Hugh, and I want to be a professional web developer. I've got a website, which can be found at 
                 <a href="https://www.live-stream-music.com" target="_blank">https://www.live-stream-music.com</a>, that
                 I'm currently working on as a hobby and to learn more about website development. More information about
                 how the website architecture can be found on the <a href="./live-stream-music.html">Live Stream Music</a>
