--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         <!-- the entry point to this file. -->
         <nav>
             <a href="./index.html">Index</a> |
-            <a href="./html/about.html">About</a>
+            <a href="./html/about.html">About</a> |
+            <a href="./html/live-stream-music.com">Live Stream Music</a>
         </nav>
 
         <hr>
